--- a/themes/ss13/style.css
+++ b/themes/ss13/style.css
@@ -8,7 +8,7 @@ BODY {
 	font-family: sans-serif;
 	font-size: 14px;
 	margin: 0;
-    background-image: url('/themes/ss13/static/space.png')
+    background-image: url('static/space.png')
 }
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 3                            menu bar                            *
